--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@ layout: default
 <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
+    /* rebuilt: true */
     max-width: 600px;
     text-align: center;
   }
